Route STDOUT of the main process to shell console. This will allow to see log messages when running with --enable-logging on Windows.

Bug: 731672

Change-Id: Ifea1498427cc510abe459664a693a71601368356
Reviewed-on: https://chromium-review.googlesource.com/528086
Commit-Queue: Ken Rockot <rockot@chromium.org>
Reviewed-by: Ken Rockot <rockot@chromium.org>
Cr-Commit-Position: refs/heads/master@{#478345}
Former-commit-id: 38d083eaea73d45388713a302faf13b93a61a120